[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prompt-debugger-env"
version = "1.0.0"
description = "OpenEnv environment for debugging LLM system prompts"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "pydantic>=2.0",
    "jsonschema",
]

[project.scripts]
server = "server.app:app"
